# ibig-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.lock.min  Cargo.toml  LICENSE  README.md  RELEASES.md  generate_coverage.sh
.github/: ci.yml
.github/workflows/: ci.yml  tests-old.yml  tests.yml
benches/: benchmarks.rs
dev-tools/: Cargo.toml
dev-tools-old/: Cargo.toml
examples/: factorial.rs
ibig/: CHANGELOG.md  Cargo.toml  README.md
ibig-core/: CHANGELOG.md  Cargo.toml  README.md
ibig-core/src/: add.rs  bits.rs  bitwise.rs  bytes.rs  convert.rs  len.rs  lib.rs  shift.rs  sign.rs  sub.rs
ibig-core/tests/: add.rs  bits.rs  bitwise.rs  bytes.rs  convert.rs  len.rs  shift.rs  sign.rs  sub.rs
ibig-old/: Cargo.toml
ibig-old/benches/: benchmarks.rs
ibig-old/src/: add_ops.rs  buffer.rs  div_ops.rs  error.rs  ibig.rs  macros.rs  memory.rs  num_traits.rs  rand.rs  shift_ops.rs  ubig.rs
ibig-old/src/arch/: mod.rs
ibig-old/src/arch/generic/: digits.rs
ibig-old/src/arch/generic_16_bit/: ntt.rs  word.rs
ibig-old/src/arch/generic_32_bit/: word.rs
ibig-old/src/arch/generic_64_bit/: ntt.rs
ibig-old/src/arch/x86/: add.rs  mod.rs
ibig-old/src/arch/x86_64/: add.rs  mod.rs
ibig-old/src/div/: divide_conquer.rs  mod.rs  simple.rs
ibig-old/src/fmt/: digit_writer.rs  mod.rs  non_power_two.rs  power_two.rs
ibig-old/src/modular/: add.rs  cmp.rs  convert.rs  fmt.rs  mod.rs  modulo.rs  pow.rs
ibig-old/src/mul/: helpers.rs  karatsuba.rs  mod.rs  toom_3.rs
ibig-old/src/parse/: mod.rs
ibig-old/tests/: bits.rs  modular.rs  radix.rs  random.rs
ibig/src/: add.rs  bits.rs  bitwise.rs  bytes.rs  convert.rs  error.rs  ibig.rs  lib.rs  macros.rs  misc.rs  ops.rs  proptest.rs  repr.rs  shift.rs  sign.rs  sub.rs  tests.rs  ubig.rs
ibig/src/ibig/: bits.rs  bytes.rs  convert.rs  misc.rs  repr.rs  sign.rs
ibig/src/tests/: bytes.rs  ibig.rs  repr.rs  ubig.rs
ibig/src/tests/ibig/: repr.rs
ibig/src/tests/ubig/: repr.rs
ibig/src/ubig/: bits.rs  bitwise.rs  bytes.rs  convert.rs  misc.rs  repr.rs
ibig/tests/: add.rs  bits.rs  bitwise.rs  bytes.rs  convert.rs  misc.rs  ops.rs  shift.rs  sign.rs  sub.rs
ibig/tests/ibig/: bits.rs  bytes.rs  convert.rs  main.rs  misc.rs
ibig/tests/ubig/: bits.rs  bitwise.rs  bytes.rs  convert.rs  main.rs  misc.rs
src/: add.rs  add_ops.rs  assert.rs  bits.rs  buffer.rs  cmp.rs  convert.rs  div.rs  div_ops.rs  error.rs  fast_divide.rs  fmt.rs  gcd.rs  gcd_ops.rs  helper_macros.rs  ibig.rs  lib.rs  macros.rs  math.rs  memory.rs  mul.rs  mul_ops.rs  normalize.rs  num_traits.rs  operators.rs  ops.rs  parse.rs  pow.rs  prelude.rs  primitive.rs  radix.rs  rand.rs  random.rs  serde.rs  shift.rs  shift_ops.rs  sign.rs  sub.rs  ubig.rs  word.rs
src/arch/: mod.rs
src/arch/generic/: add.rs  digits.rs
src/arch/generic_16_bit/: ntt.rs
src/arch/generic_32_bit/: mod.rs  ntt.rs
src/arch/generic_64_bit/: mod.rs  ntt.rs  word.rs
src/arch/x86/: add.rs  mod.rs
src/arch/x86_64/: add.rs  mod.rs
src/div/: divide_conquer.rs  fast_divisor.rs  mod.rs  simple.rs
src/fmt/: digit_writer.rs  mod.rs  non_power_two.rs  power_two.rs
src/gcd/: binary.rs  mod.rs  simple.rs
src/modular/: add.rs  cmp.rs  convert.rs  div.rs  fmt.rs  inv.rs  mod.rs  modulo.rs  modulo_ring.rs  mul.rs  pow.rs
src/mul/: helpers.rs  karatsuba.rs  mod.rs  ntt.rs  simple.rs  toom_3.rs
src/parse/: mod.rs  non_power_two.rs  power_two.rs
src/ubig/: allocate.rs  buffer.rs  clone.rs  convert.rs  large.rs  memory.rs  normalize.rs  radix.rs  word.rs
tests/: add.rs  arithmetic.rs  bits.rs  cmp.rs  convert.rs  div.rs  gcd.rs  hash.rs  modular.rs  mul.rs  pow.rs  radix.rs  random.rs  serde.rs  shift.rs  sign.rs
