[package]
name = "ibig"
version = "0.3.2"
authors = ["Tomek Czajka <tczajka@gmail.com>"]
edition = "2021"
description = "A big integer library with good performance"
keywords = ["bigint", "bignum", "mathematics"]
categories = ["mathematics", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tczajka/ibig-rs"
homepage = "https://github.com/tczajka/ibig-rs"
readme = "README.md"
exclude = ["generate_coverage.sh"]

[workspace]
members = ["dev-tools"]

[dependencies]
static_assertions = "1.1"
const_fn_assert = "0.1.2"
cfg-if = "1.0.0"
rand = { version = "0.8.3", default-features = false, optional = true }
num-traits = { version = "0.2.14", default-features = false, optional = true }

[dev-dependencies]
rand = "0.8.3"
criterion = { version = "0.3.4", features = ["html_reports"] }

[features]
default = ["std", "rand", "num-traits"]

# Interface with the std library.
std = []

[lib]
bench = false

[[test]]
name = "random"
required-features = ["rand"]

[[bench]]
name = "benchmarks"
required-features = ["rand"]
harness = false
