[package]
name = "ibig"
version = "0.3.3"
authors = ["Tomek Czajka <tczajka@gmail.com>"]
edition = "2018"
rust-version = "1.49"
description = "A big integer library with good performance"
keywords = ["bigint", "bignum", "mathematics"]
categories = ["mathematics", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tczajka/ibig-rs"
homepage = "https://github.com/tczajka/ibig-rs"
readme = "README.md"
exclude = ["generate_coverage.sh"]

[workspace]
members = ["dev-tools"]

[dependencies]
cfg-if = "1.0.0"
const_fn_assert = "0.1.2"
static_assertions = "1.1"
num-traits = { optional = true, version = "0.2.14", default-features = false }
rand = { optional = true, version = "0.8.3", default-features = false }
serde = { optional = true, version = "1.0.130", default-features = false, features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.3.4", features = ["html_reports"] }
rand = "0.8.3"
serde_test = "1.0.130"

[features]
default = ["std", "rand", "num-traits"]

# Interface with the std library.
std = []

[lib]
bench = false

[[test]]
name = "random"
required-features = ["rand"]

[[test]]
name = "serde"
required-features = ["serde"]

[[bench]]
name = "benchmarks"
required-features = ["rand"]
harness = false
