[package]
name = "ibig"
version = "0.3.6"
authors = ["Tomek Czajka <tczajka@gmail.com>"]
edition = "2021"
rust-version = "1.93"
description = "A big integer library with good performance"
keywords = ["bigint", "bignum", "mathematics", "modular", "modulo"]
categories = ["mathematics", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tczajka/ibig"
homepage = "https://github.com/tczajka/ibig"
readme = "README.md"
exclude = ["generate_coverage.sh"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]

# Interface with the std library.
std = []

[lints.rust]
# `force_bits` is set via RUSTFLAGS to test a specific word size (see src/arch/mod.rs).
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(force_bits, values("16", "32", "64"))'] }

[dependencies.cfg-if]
version = "1.0.0"

[dependencies.static_assertions]
version = "1.1"

[dependencies.num-traits]
version = "0.2.14"
default-features = false

[dependencies.rand]
optional = true
version = "0.8.3"
default-features = false

[dependencies.serde]
optional = true
version = "1.0.130"
default-features = false
features = ["derive"]

[dev-dependencies.criterion]
version = "0.3.4"
features = ["html_reports"]

[dev-dependencies.rand]
version = "0.8.3"

[dev-dependencies.serde_test]
version = "1.0.130"

[lib]
bench = false

[[test]]
name = "random"
required-features = ["rand"]

[[test]]
name = "serde"
required-features = ["serde"]

[[bench]]
name = "benchmarks"
required-features = ["rand"]
harness = false
