[package]
name = "ibig"
version = "0.4.0"
authors = ["Tomek Czajka <tczajka@gmail.com>"]
edition = "2024"
rust-version = "1.95"
description = "A big integer library"
keywords = ["bigint", "bignum"]
categories = ["mathematics", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tczajka/ibig"
include = [
    "src/**/*.rs",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
]

[dependencies]
ibig-core = { version = "0.0.1", path = "../ibig-core" }
smallvec = { version = "1.15", features = ["union", "const_generics", "const_new"] }
proptest = { version = "1.6", optional = true }
unative = { version = "0.2.6", optional = true }

[features]
# Includes `proptest` support.
proptest = ["dep:proptest", "unative/proptest"]

[dev-dependencies]
# Enable the `proptest` feature whenever this crate's own tests are built.
ibig = { path = ".", features = ["proptest"] }
